docs: add modern SVG logo, comprehensive UserGuide.md, updated milestone plan v0.1.72, progress log, and README badges